--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,6 +8,7 @@
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="5dp"
         android:src="@drawable/title_menu_main" />
 
     <LinearLayout
@@ -52,10 +53,11 @@
         android:layout_alignParentBottom="true" />
     <com.askey.dvr.cdr7010.setting.widget.MarqueeTextView
         android:id="@+id/bottom_notify"
-        android:layout_width="150dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:paddingStart="10dp"
+        android:background="@drawable/bg_menu_main_description"
         android:layout_alignParentBottom="true"
-        android:layout_toStartOf="@id/bottom"
         android:singleLine="true"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
