--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,7 @@
     
     <style name="AppThemeNoAnimation" parent="AppTheme">
         <item name="android:windowAnimationStyle">@style/NoAnimation</item>
+        <item name="android:windowFullscreen">true</item>
     </style>
 
     <style name="NoAnimation">
