--- a/app/src/main/res/layout/menu_list_item.xml
+++ b/app/src/main/res/layout/menu_list_item.xml
@@ -6,9 +6,9 @@
 
     <TextView
         android:id="@+id/list_item"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="29dp"
-        android:paddingLeft="15dp"
+        android:paddingStart="20dp"
         android:background="@drawable/menu_focus_item_bg"
         android:ellipsize="marquee"
         android:focusableInTouchMode="true"
