--- a/app/src/main/res/layout/activity_leveler_detail.xml
+++ b/app/src/main/res/layout/activity_leveler_detail.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
     android:gravity="center_horizontal"
+    android:background="@drawable/bg_menu_main"
     android:orientation="vertical">
 
     <TextView
@@ -14,6 +15,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/title_margin_top"
+        android:textColor="@color/white"
         android:text="@string/leveler_detail_title"
         android:textSize="@dimen/time_size" />
 
@@ -24,24 +26,28 @@
         android:layout_below="@+id/leveler_detail_title"
         android:layout_marginLeft="@dimen/view_margin_top"
         android:layout_marginRight="@dimen/view_margin_top"
+        android:textColor="@color/white"
         android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
+            android:textColor="@color/white"
             android:text="@string/leveler_detail_context1" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
+            android:textColor="@color/white"
             android:text="@string/leveler_detail_context2" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/view_margin_top"
+            android:textColor="@color/white"
             android:text="@string/leveler_detail_context3" />
     </LinearLayout>
 
