--- a/app/src/main/res/drawable/range_setting_horizon_line.xml
+++ b/app/src/main/res/drawable/range_setting_horizon_line.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@android:color/background_dark" />
+    android:shape="line">
     <stroke
-        android:width="1dp"
+        android:dashWidth="10dp"
+        android:dashGap="5dp"
+        android:width="5dp"
         android:color="@android:color/background_light" />
-    <size android:width="300dp" android:height="3dp"/>
+    <size android:height="5dp"/>
 </shape>
