--- a/app/src/main/res/layout/activity_range_setting.xml
+++ b/app/src/main/res/layout/activity_range_setting.xml
@@ -11,6 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <View
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_gravity="center_vertical"
+        android:layerType="software"
+        android:background="@drawable/range_setting_horizon_line" />
+    <View
+        android:id="@+id/line_center"
+        android:layout_width="5dp"
+        android:layout_height="match_parent"
+        android:background="@android:color/background_light"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"
+        />
+
     <TextView
         android:id="@+id/notify_msg"
         android:layout_width="300dp"
@@ -24,10 +40,4 @@
         android:text="这里显示提示信息"
         />
 
-    <View
-        android:id="@+id/line"
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:layout_gravity="center_vertical"
-        android:background="@drawable/range_setting_line" />
 </FrameLayout>
