--- a/app/src/main/res/layout/activity_system_installation_leveler.xml
+++ b/app/src/main/res/layout/activity_system_installation_leveler.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <SurfaceView
         android:id="@+id/preview"
         android:layout_width="match_parent"
@@ -14,21 +15,9 @@
         android:background="@color/color_00ffffff"
         android:id="@+id/show"/>
 
-    <TextView
+    <include
         android:id="@+id/leveler_detail_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:paddingLeft="@dimen/view_pading_left"
-        android:paddingRight="@dimen/view_pading_left"
-        android:paddingTop="@dimen/view_pading_top"
-        android:paddingBottom="@dimen/view_pading_top"
-        android:layout_marginTop="@dimen/leveler_detail_title_margin_top"
-        android:background="@color/text_color"
-        android:text="@string/installation_tool_leveler"
-        android:textColor="@color/white"
-        android:textSize="@dimen/time_size" />
+        layout="@layout/title_layout" />
 
     <include
         layout="@layout/right_button_layout"
